add a gx release cmd

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "language": "go",
   "license": "",
   "name": "go-reuseport",
+  "releaseCmd": "git commit -a -m \"gx publish $VERSION\"",
   "version": "0.1.9"
 }
 
