--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
       "hash": "QmVmDhyTTUcQXFD1rRQ64fGLMSAoaQvNH3hwuaCFAPq2hy",
       "name": "errors",
       "version": "0.0.1"
+    },
+    {
+      "author": "magik6k",
+      "hash": "QmPVkJMTeRC6iBByPWdrRkD3BE5UXsj5HPzb4kPqL186mS",
+      "name": "testify",
+      "version": "1.0.0"
     }
   ],
   "gxVersion": "0.9.0",
